# rust-practice

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy-fmt.yml
actix-practice/: .env.example  Cargo.toml  docker-compose.yml
actix-practice/src/: api.rs  constants.rs  db.rs  error.rs  main.rs
actix-practice/src/config/: config.rs
actix-practice/src/dto/: mod.rs
actix-practice/src/models/: mod.rs
actix-practice/src/services/: book_service.rs  mod.rs
api-practice/: .env.example  Cargo.toml  README.md  docker-compose.yml
api-practice/src/: handlers.rs  main.rs
api-practice/src/user/: handlers.rs  mod.rs  models.rs
async-practice/: Cargo.toml  README.md
async-practice/src/: async_std.rs  main.rs
competitive/: Cargo.toml
competitive/src/: binary_search.rs  main.rs
concurrency-practice/: Cargo.toml  README.md
concurrency-practice/src/: future.rs  threads.rs  tokio.rs
conner/: Cargo.toml
conner/src/: cli.rs  config.rs  container.rs  errors.rs  main.rs
error-handling/: Cargo.toml  README.md
error-handling/src/: errors.rs  main.rs  use_lib.rs
generics-practice/: Cargo.toml
generics-practice/src/: logger.rs  newtype.rs
grpc/: Cargo.toml  README.md  build.rs  docker-compose.yml
grpc/migrations/2021-09-09-043819_users/: up.sql
grpc/proto/: user.proto
grpc/src/: client.rs  main.rs  schema.rs  server.rs
grpc/src/user_rpc/: handlers.rs  mod.rs  models.rs
http-server/: Cargo.toml
http-server/src/: main.rs
http-server/src/http/: query_string.rs  request.rs
kafka/: Cargo.toml  README.md  docker-compose.yml
kafka/src/: async_processing.rs  consumer.rs  producer.rs  utils.rs
lifetime-practice/: Cargo.toml
lifetime-practice/src/: lib.rs
matching-keyword/: Cargo.toml  README.md  message.test.csv  test.json
matching-keyword/benches/: matcher_benchmark.rs
matching-keyword/src/: main.rs
matching-keyword/src/matcher/: mod.rs
parser-csv-in-gz/: Cargo.toml  README.md  benchmark.txt
parser-csv-in-gz/src/: parallel.rs  single-perf-csv.rs  single.rs
parser-peg/: Cargo.toml  README.md
parser-peg/files/: node.service  test.json
parser-peg/src/: main.rs  parser.rs  parser_json.rs
parser-peg/src/grammar/: json.pest  systemd.pest
practices/: README.md
practices/src/: arrays.rs  conditionals.rs  enums.rs  functions.rs  generic_bounds.rs  lifetimes.rs  linked_list.rs  loops.rs  macro_rules.rs  main.rs  ownership_borrowing.rs  pointer_ref.rs  smart_pointer.rs  strings.rs  structs.rs  traits.rs  tuples.rs  types.rs  vars.rs  vectors.rs
rabbitmq/: Cargo.toml  Makefile  README.md  docker-compose.yml
rabbitmq/src/: main.rs
src/: enums.rs  functions.rs  main.rs  ownership_borrowing.rs  structs.rs  types.rs  vars.rs
zocial_eye_csv/: Cargo.toml  config.json
zocial_eye_csv/src/: lib.rs  main.rs
zocial_eye_csv/src/config_reader/: config_reader.rs  keyword_config.rs  mod.rs
zocial_eye_csv/src/csv_reader/: reader.rs
zocial_eye_csv/src/matcher/: mod.rs
zocial_eye_csv/src/zocial_eye_data/: mod.rs  zocial_data.rs
