[package]
name = "actix-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
actix-service = "2.0.2"
env_logger = "0.9.0"
actix-rt = "2.5.0"
bson = { version = "2.1.0", features = ["chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.1.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
thiserror = "1.0"
envfile = "0.2.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.4"


[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["async-std-runtime"]
