[package]
name = "api-practice"
version = "0.1.0"
authors = ["aofdev <aof.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-web-httpauth = "0.5.1"
derive_more = "0.99.14"
diesel = { version = "1.4.7", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.15"
r2d2 = "0.8.9"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
actix-service = "2.0.0"
alcoholic_jwt = "1.0.0"
reqwest = "0.11.4"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.4"
actix-rt = "1.1.1"