[package]
name = "concurrency-practice"
version = "0.1.0"
authors = ["aofdev <aof.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.10.0" 
surf = "2.3.2"
futures = "0.3.19"
reqwest = { version = "0.11.8", features = ["rustls-tls"], default-features = false }
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
color-eyre = "0.5.11"
tracing = "0.1.29"
tracing-subscriber = "0.3.4"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "async_std"
path = "src/async_std.rs"

[[bin]]
name = "tokio"
path = "src/tokio.rs"

[[bin]]
name = "future"
path = "src/future.rs"
