[package]
name = "error-handling"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
chrono = "0.4"
thiserror = "1.0.25"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.126", features = ["derive"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "use_lib"
path = "src/use_lib.rs"