[package]
name = "generics-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"

[[bin]]
name = "logger"
path = "src/logger.rs"

[[bin]]
name = "newtype"
path = "src/newtype.rs"
