[package]
name = "kafka"
version = "0.1.0"
authors = ["aofdev <aof.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
clap = "2.33.3"
log = "0.4.14"
chrono = "0.4.19"
env_logger = "0.9.0"
rdkafka = { version = "0.26", features = ["cmake-build"] }

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"