[package]
name = "zocial_eye_csv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

csv = "1.1"
flate2 = "1.0.20"
regex = "1"
rayon = "1.5"
lazy_static = "1.4.0"
num_cpus = "1.13.0"
chrono = "0.4.19"
serde = {version = "1",features = ["derive"]}
serde_json = {version = "1"}
aho-corasick = "0.7.18"